--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,40 @@
 
 - move inline styles to CSS
 - structure code
+
+
+
+------------
+
+Glad to hear you are liking it! Absolutely, a good way would be to use manualFilter. Basically on every search use something like (http://kiro.me/projects/fuse.html) to search. Then return the cids, update a manualFilter with them and, boom, problem solved. You'd still be able to compose this filter with other, categorical filters if you wanted to.
+
+
+-------------
+
+var serial_maker = function ( ) {
+// Produce an object that produces unique strings. A
+// unique string is made up of two parts: a prefix
+// and a sequence number. The object comes with
+// methods for setting the prefix and sequence
+// number, and a gensym method that produces unique
+// strings.
+ var prefix = '';
+ var seq = 0;
+ return {
+ set_prefix: function (p) {
+ prefix = String(p);
+ },
+ set_seq: function (s) {
+ seq = s;
+ },
+ gensym: function ( ) {
+ var result = prefix + seq;
+ seq += 1;
+ return result;
+ }
+ };
+}( );
+var seqer = serial_maker( );
+seqer.set_prefix = 'Q';
+seqer.set_seq = 1000;
+var unique = seqer.gensym( ); // unique is "Q1000"
